add livro & quick fixes
