# src/controller/CategoriaController.ts
@@ -1,80 +1,80 @@
 import { Body, Controller, Delete, Get, Post, Put, Query, Res, Route, Tags, TsoaResponse } from "tsoa";
-import { EmprestimoService } from "../service/EmprestimoService";
+import { CategoriaService } from "../service/EmprestimoService";
 import { BasicResponseDto } from "../model/dto/BasicResponseDto";
-import { EmprestimoResponseDto } from "../model/dto/EmprestimoResponseDto";
+import { CategoriaResponseDto } from "../model/dto/CategoriaResponseDto";
 
 
-@Route("emprestimo")
-@Tags("Emprestimo")
-export class EmprestimoController extends Controller{
+@Route("categoria")
+@Tags("Categoria")
+export class CategoriaController extends Controller{
     
-    private emprestimoService = new EmprestimoService();
+    private categoriaService = new CategoriaService();
 
 
     @Post()
-    async cadastrarEmprestimo(
-        @Body() dto: EmprestimoResponseDto,
+    async cadastrarCategoria(
+        @Body() dto: CategoriaResponseDto,
         @Res() fail: TsoaResponse<400, BasicResponseDto>,
         @Res() success: TsoaResponse<201, BasicResponseDto>
     ): Promise<void> {
         try {
-            const emprestimo = await this.emprestimoService.cadastrarEmprestimo(dto);
-            return success(201, new BasicResponseDto("Emprestimo criada com sucesso!", emprestimo));
+            const categoria = await this.categoriaService.cadastrarCategoria(dto);
+            return success(201, new BasicResponseDto("Categoria criada com sucesso!", categoria));
         } catch (error: any) {
             return fail(400, new BasicResponseDto(error.message, undefined));
         }
     };    
 
     @Put()
-    async atualizarEmprestimo (
-        @Body() dto: EmprestimoResponseDto,
+    async atualizarCategoria (
+        @Body() dto: CategoriaResponseDto,
         @Res() fail: TsoaResponse<400, BasicResponseDto>,
         @Res() success: TsoaResponse<200, BasicResponseDto>
     ):Promise<void> {
         try {
-            const emprestimo = await this.emprestimoService.atualizarEmprestimo(dto);
-            return success(200, new BasicResponseDto("Emprestimo atualizado com sucesso!", emprestimo));
+            const categoria = await this.categoriaService.atualizarCategoria(dto);
+            return success(200, new BasicResponseDto("Categoria atualizado com sucesso!", categoria));
         } catch (error: any) {
             return fail(400, new BasicResponseDto(error.message, undefined));
         }
     };
 
     @Delete()
-    async deletarEmprestimo (
-        @Body() dto: EmprestimoResponseDto,
+    async deletarCategoria (
+        @Body() dto: CategoriaResponseDto,
         @Res() fail: TsoaResponse<400, BasicResponseDto>,
         @Res() success: TsoaResponse<200, BasicResponseDto>
     ):Promise<void> {
         try {
-            const emprestimo = await this.emprestimoService.deletarEmprestimo(dto);
-            return success(200, new BasicResponseDto("Emprestimo deletado com sucesso!", emprestimo));
+            const categoria = await this.categoriaService.deletarCategoria(dto);
+            return success(200, new BasicResponseDto("Categoria deletado com sucesso!", categoria));
         } catch (error: any) {
             return fail(400, new BasicResponseDto(error.message, undefined));
         }
     };
 
     @Get()
-    async filtrarEmprestimo (
+    async filtrarCategoria (
         @Query() id: string,
         @Res() fail: TsoaResponse<400, BasicResponseDto>,
         @Res() success: TsoaResponse<200, BasicResponseDto>
     ){
         try {
-            const emprestimo = await this.emprestimoService.filtrarEmprestimo(id);
-            return success(200, new BasicResponseDto("Emprestimo encontrado com sucesso!", emprestimo));
+            const categoria = await this.categoriaService.filtrarCategoria(id);
+            return success(200, new BasicResponseDto("Categoria encontrado com sucesso!", categoria));
         } catch (error: any) {
             return fail(400, new BasicResponseDto(error.message, undefined));
         }
     };
 
     @Get("all")
-    async listarTodosEmprestimos (
+    async listarTodosCategorias (
         @Res() fail: TsoaResponse<400, BasicResponseDto>,
         @Res() success: TsoaResponse<200, BasicResponseDto>
     ){
         try {
-            const emprestimoss = await this.emprestimoService.listarTodasEmprestimos();
-            return success(200, new BasicResponseDto("Emprestimos encontrados com sucesso!", emprestimoss));
+            const emprestimoss = await this.categoriaService.listarTodasCategorias();
+            return success(200, new BasicResponseDto("Categorias encontrados com sucesso!", emprestimoss));
         } catch (error: any) {
             return fail(400, new BasicResponseDto(error.message, undefined));
         }
